termine la parte de about.html

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
           <div class="navbar-nav d-flex justify-content-between w-75">
             <a class="nav-link text-secondary-emphasis header__text" href="./pages/about.html">Acerca De Mi</a>
             <a class="nav-link text-secondary-emphasis header__text" href="./pages/projects.html">Proyectos</a>
-            <a class="nav-link text-secondary-emphasis header__text" href="./pages/resume.html">Resume</a>
+            <a class="nav-link text-secondary-emphasis header__text" href="./pages/resume.html">Resumen</a>
             <a class="nav-link text-secondary-emphasis header__text" href="./pages/contact.html">Contacto</a>
           </div>
         </div>
