--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -38,22 +38,44 @@
       </div>
     </nav>
   </header>
+  <h1 class="title color-white fs-3 text">Enviame tu mensaje</h1>
+  <div class=" d-flex justify-content-center  col-sm-8 col-md-6 m-auto  my-5">
+    <form class="row g-3 col-10">
+      <div class="">
+        <label for="formGroupExampleInput " class="form-label color-white">Nombre</label>
+        <input type="text " class="form-control bg-transparent" id="formGroupExampleInput" placeholder="Ej: tu Nombre">
+      </div>
+      <div class="col-12">
+        <label for="inputEmail3" class="col-sm-2 col-form-label color-white">Email</label>
+        <div class="col-sm-112">
+          <input type="email" class="form-control bg-transparent" id="inputEmail3" placeholder="email@gmail.com">
+        </div>
+      </div>
+      <div class="col-md-12">
+        <label for="inputState" class="form-label color-white">Asunto</label>
+        <select id="inputState" class="form-select bg-transparent">
+          <option selected>Select...</option>
+          <option>Trabajo</option>
+          <option>Publicidad</option>
+        </select>
+      </div>
+      <div class="mb-3">
+        <label for="exampleFormControlTextarea1" class="form-label color-white">Tu Mensaje</label>
+        <textarea class="form-control bg-transparent h-100" id="exampleFormControlTextarea1" rows="3"></textarea>
+      </div>
+      <div class="col-12">
+        <div class="form-check">
+          <input class="form-check-input bg-transparent" type="checkbox" id="gridCheck">
+          <label class="form-check-label color-white" for="gridCheck">Acepto los terminos y condiciones 
+          </label>
+        </div>
+      </div>
+      <div class="col-12">
+        <button type="submit" class="btn main-button">Enviar</button>
+      </div>
+    </form>
+  </div>
 
-  <h1 class="title color-white fs-3 text">Acerca de Mi</h1>
-  <section class="layout">
-    <h2 class="title color-white fs-4 text">Franco Del Porto, Developer</h2>
-    <div class="d-flex row justify-content-center">
-      <p class="text color-white col-8 text-center mt-3">Lorem ipsum dolor sit amet consectetur adipisicing elit. Blanditiis commodi quibusdam odio ratione id itaque voluptatibus neque laborum nulla unde eveniet veniam excepturi quo rem, libero quisquam? Maxime, voluptatibus sed!</p>
-      <p class="text color-white col-8 text-center mb-5">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Porro culpa ab delectus. Provident deserunt iure nisi rerum adipisci quae earum quibusdam, ut corrupti quis officia vitae expedita explicabo veritatis. At! </p>
-      <img class="section-about__img w-50" src="../assets/programador.webp" alt="mi foto">
-      <h2 class="title color-white fs-4 text pt-4">Desarollo Web</h2>
-      <p class="text color-white col-8 text-center">Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusantium aut nostrum, quo porro accusamus debitis dolores expedita exercitationem vitae at nisi iste dicta necessitatibus, modi ipsa maiores officiis? Quae, quia ex assumenda officia accusantium vitae nihil impedit facilis sint? Error dolore modi consequuntur provident. Soluta, voluptate? Veniam ut vero eligendi quam, eveniet molestias vel repudiandae sapiente, non aut nesciunt itaque eius. Temporibus cupiditate, dignissimos consectetur neque repellendus at perspiciatis modi ratione blanditiis laudantium, nihil excepturi reiciendis officiis ullam omnis velit inventore numquam nulla? Facere praesentium dolorum dolorem culpa, sapiente fugiat impedit quia inventore distinctio eum illo possimus iste voluptas odit aperiam quidem obcaecati pariatur rerum corrupti, recusandae consequuntur sit! Consectetur distinctio officia accusantium laudantium placeat. Odit enim quas, ipsa a ipsam neque vero consequuntur quod commodi blanditiis, impedit similique officia perspiciatis aspernatur
-      </p>
-      <h2 class="title color-white fs-4 text pt-1">Desarrollo De aplicaciones </h2>
-      <p class="text color-white col-8 pb-5 text-center mb-5"> Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempora aspernatur quam voluptates eos numquam quae quasi, aliquid alias dolores, voluptate asperiores eius sed quidem possimus neque voluptatem fugiat! Quae, dolore?
-      </p>
-    </div>
-  </section>
 
   <footer class="footer">
     <div class="footer__personal-info-container col-6">
