--- a/index.html
+++ b/index.html
@@ -7,6 +7,15 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta name="description" content="Programador en Argentina" />
   <title>Dezaing - Sitio Web</title>
+  <meta name="description" content="En Dezaing armamos la página web para tu emprendimiento a un precio accesible. con todos sus wireframes para que veas como queda el trabajo final" />
+  <meta name="keywords" content="Diseño, Página web, Programación, Precio accesible, argentina, emprendimiento, wireframes">
+  <meta name="author" content="Franco Del Porto">
+  <meta property="og:title" content="Obtene tu página web a un precio accesible">
+  <meta property="og:description" content="En esta páginas podes contactar conmigo para tener tu web para tu emprendimiento!">
+  <meta property="og:image" content="./assets/programador.webp">
+  <meta property="og:type" content="website">
+  <meta property="og:locale" content="es_ES">
+  <meta property="og:locale:alternate" content="us_US">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet"
