agregé la parte de proyectos de fantasia

--- a/pages/about.html
+++ b/pages/about.html
@@ -52,14 +52,12 @@
   <section class="layout">
     <h2 class="title color-white fs-4 text">Franco Del Porto, Developer</h2>
     <div class="d-flex row justify-content-center">
-      <p class="text color-white col-8 text-center mt-3">Lorem ipsum dolor sit amet consectetur adipisicing elit. Blanditiis commodi quibusdam odio ratione id itaque voluptatibus neque laborum nulla unde eveniet veniam excepturi quo rem, libero quisquam? Maxime, voluptatibus sed!</p>
-      <p class="text color-white col-8 text-center mb-5">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Porro culpa ab delectus. Provident deserunt iure nisi rerum adipisci quae earum quibusdam, ut corrupti quis officia vitae expedita explicabo veritatis. At! </p>
+      <p class="text color-white col-8 text-center mt-3">Recibido de periodista deportivo y dueño de un emprendimiento de diseño gráfico, decidió ir más allá y adentrarse en el mundo de la programación donde encontró una pasión y un anexo a su propio emprendimiento. </p>
       <img class="section-about__img w-50" src="../assets/programador.webp" alt="mi foto">
       <h2 class="title color-white fs-4 text pt-4">Desarollo Web</h2>
-      <p class="text color-white col-8 text-center">Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusantium aut nostrum, quo porro accusamus debitis dolores expedita exercitationem vitae at nisi iste dicta necessitatibus, modi ipsa maiores officiis? Quae, quia ex assumenda officia accusantium vitae nihil impedit facilis sint? Error dolore modi consequuntur provident. Soluta, voluptate? Veniam ut vero eligendi quam, eveniet molestias vel repudiandae sapiente, non aut nesciunt itaque eius. Temporibus cupiditate, dignissimos consectetur neque repellendus at perspiciatis modi ratione blanditiis laudantium, nihil excepturi reiciendis officiis ullam omnis velit inventore numquam nulla? Facere praesentium dolorum dolorem culpa, sapiente fugiat impedit quia inventore distinctio eum illo possimus iste voluptas odit aperiam quidem obcaecati pariatur rerum corrupti, recusandae consequuntur sit! Consectetur distinctio officia accusantium laudantium placeat. Odit enim quas, ipsa a ipsam neque vero consequuntur quod commodi blanditiis, impedit similique officia perspiciatis aspernatur
-      </p>
+      <p class="text color-white col-8 text-center">En mis principales tareas y objetivos está buscar soluciones. Crear páginas web a gusto del cliente mediante prototipos hasta llegar al resultado deseado, buscando referencias y entendiendo que es lo que necesita. También resolver problemas del sitio web, mantener y actualizarlo si surgen cambios nuevos. Algo clave es controlar el tráfico al sitio web para entender si lo que se muestra es atractivo o se debería mejorar.
       <h2 class="title color-white fs-4 text pt-1">Desarrollo De aplicaciones </h2>
-      <p class="text color-white col-8 pb-5 text-center mb-5"> Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempora aspernatur quam voluptates eos numquam quae quasi, aliquid alias dolores, voluptate asperiores eius sed quidem possimus neque voluptatem fugiat! Quae, dolore?
+      <p class="text color-white col-8 pb-5 text-center mb-5"> Desarrollamos aplicaciones multiplataforma desde su diseño hasta su despliegue en las tiendas, incentivando a  tu marca a que crezca cada vez más. El principal objetivo es que la aplicación provea una gran experiencia al usuario, donde resolvamos todas sus necesidades y demandas.
       </p>
     </div>
   </section>
@@ -70,7 +68,7 @@
           alt="logo" /></a>
       <div class="d-none d-md-block">
         <h6 class="text-light">Franco Del Porto</h6>
-        <h6 class="text-light">Web Developer</h6>
+        <h6 class="text-light">Llevamos tu proyecto al siguiente nivel</h6>
       </div>
     </div>
     <div class="d-flex justify-content-end col-5">
