--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -92,7 +92,7 @@
           alt="logo" /></a>
       <div class="d-none d-md-block">
         <h6 class="text-light">Franco Del Porto</h6>
-        <h6 class="text-light">Web Developer</h6>
+        <h6 class="text-light">Llevamos tu proyecto al siguiente nivel</h6>
       </div>
     </div>
     <div class="d-flex justify-content-end col-5">
