--- a/pages/proyectos.html
+++ b/pages/proyectos.html
@@ -48,6 +48,68 @@
     </nav>
   </header>
 
+  <h1 class="title color-white fs-3 text">My projects</h1>
+  <section class="container-cards px-5 lg d-flex row">
+
+    <div class="card text-bg-dark mb-3" style="width: 18rem;">
+      <div class="flip-card">
+        <div class="flip-card-inner">
+          <div class="flip-card-front">
+            <img src="../assets/latamex.webp" class="card-img-top image__card" alt="imagen del sitio">
+          </div>
+          <div class="flip-card-back">
+            <img src="../assets/latamex.webp" class="card-img-top image__card" alt="imagen del sitio">
+          </div>
+        </div>
+      </div>
+      <div class="card-body">
+        <h5 class="card-title">Latamex</h5>
+        <p class="card-text">
+          Una Página para comprar y vender criptomonedas.
+        </p>
+        <a href="#" target="_blank" class="btn main-button">Visita el sitio</a>
+      </div>
+    </div>
+
+    <div class="card text-bg-dark mb-3" style="width: 18rem;">
+      <div class="flip-card">
+        <div class="flip-card-inner">
+          <div class="flip-card-front">
+            <img src="../assets/ping.webp" class="card-img-top" alt="imagen del sitio">
+          </div>
+          <div class="flip-card-back">
+            <img src="../assets/ping.webp" class="card-img-top" alt="imagen del sitio">
+          </div>
+        </div>
+      </div>
+      <div class="card-body">
+        <h5 class="card-title">Ping</h5>
+        <p class="card-text"> Una Wallet al estilo Metamask donde podes tener almacenado tu dinero en crypto como por ejemplo en ETH
+        </p>
+        <a href="#" target="_blank" class="btn main-button">Visita el sitio</a>
+      </div>
+    </div>
+
+    <div class="card text-bg-dark mb-3" style="width: 18rem;">
+      <div class="flip-card">
+        <div class="flip-card-inner">
+          <div class="flip-card-front">
+            <img src="../assets/claro-pay.webp" class="card-img-top" alt="imagen del sitio">
+          </div>
+          <div class="flip-card-back">
+            <img src="#" class="card-img-top" alt="imagen del sitio">
+          </div>
+        </div>
+      </div>
+      <div class="card-body">
+        <h5 class="card-title">Claro pay</h5>
+        <p class="card-text">Una Wallet para pagar servicios desde tu celular</p>
+        <a href="#" target="_blank" class="btn main-button">Visit site</a>
+      </div>
+    </div>
+  </section>
+
+
 
   <footer class="footer">
     <div class="footer__personal-info-container col-6">
@@ -55,7 +117,7 @@
           alt="logo" /></a>
       <div class="d-none d-md-block">
         <h6 class="text-light">Franco Del Porto</h6>
-        <h6 class="text-light">Web Developer</h6>
+        <h6 class="text-light">Llevamos tu proyecto al siguiente nivel</h6>
       </div>
     </div>
     <div class="d-flex justify-content-end col-5">
