corregí el nombre

--- a/pages/proyectos.html
+++ b/pages/proyectos.html
@@ -104,7 +104,7 @@
       <div class="card-body">
         <h5 class="card-title">Claro pay</h5>
         <p class="card-text">Una Wallet para pagar servicios desde tu celular</p>
-        <a href="#" target="_blank" class="btn main-button">Visit site</a>
+        <a href="#" target="_blank" class="btn main-button">Visita el sitio</a>
       </div>
     </div>
   </section>
