terminada la parte de resumen.html

--- a/pages/resumen.html
+++ b/pages/resumen.html
@@ -47,7 +47,58 @@
       </div>
     </nav>
   </header>
+  <h1 class="title color-white fs-3 text">Resumen</h1>
+  <section class="layout__resume col-12 flex-column flex-md-row">
+    <article class="px-2 mb-5">
+      <img src="../assets/LogoSmall.png" width="100" alt="mi foto" />
+      <h2 class="color-white fs-4 text">Tecnologías</h2>
+      <ul class="list text color-white">
+        <li>HTML 5</li>
+        <li>CSS</li>
+        <li>Bootstrap 5</li>
+      </ul>
+      <a href="../files/CV - Franco Del Porto.pdf" target="_blank"><button class="btn main-button">Descarga El CV</button></a>
+      <div class="aside__redes d-flex justify-content-between">
+        <a href="https://github.com/fdelporto" target="_blank"><img src="../assets/github.svg" width="40"
+            alt="github" /></a>
+        <a href="https://www.linkedin.com/in/francodelporto/" target="_blank"><img src="../assets/link.svg" width="40"
+            alt="linkedin" /></a>
+        <a href="mailto:fdelporto88@gmail.com" target="_blank"><img src="../assets/gmail.svg" alt="gmail"
+            width="40" /></a>
+      </div>
+    </article>
+    <section class="container-resume col-9">
+        <article class="col-sm-12 col-md-9">
+          <h2 class="subtitle color-white fs-4 text">Franco Del Porto</h2>
+          <h3 class="subtitle color-white fs-5 text">Developer</h3>
+          <p class="text color-white text">
+            Me gusta estudiar de forma autonoma, hacer mis propios proyectos para poner en práctica mi conocimiento. Miro mucho contenido en youtube para poder seguir prácticando día a día.
+            luego de la finalización del curso que estoy realizando, voy a profundisarme mucho mas en JavaScript, intento siempre mantener el código ordenado y limpio para que se entienda de mejor manera el trabajo.
 
+          </p>
+        </article>
+        <article class="col-sm-12 col-md-9">
+          <h3 class="subtitle color-white fs-5 text">Trabajos Anteriores</h3>
+
+          <p class="text color-white">
+            Actualmente hago solo trabajos freelance y a pedido de mis amigos que tienen emprendimientos chicos
+          </p>
+          <h4 class="subtitle color-white fs-6 text">Proyectos a Futuro</h4>
+          <ul class=" list text color-white">
+            <li>
+              Página de un bódegon de comida en Paternal (Cortíle)
+            </li>
+            <li>
+              Página web de una cervecería en Palermo
+            </li>
+            <li>
+             Página de un emprendimiento gráfico 
+            </li>
+          </ul>
+        </article>
+
+      </section>
+    </section>
 
   <footer class="footer">
     <div class="footer__personal-info-container col-6">
