linkiee las paginas al index.html

--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
       </div>
 
       <div class="carousel-item">
-        <a href="./pages/projects.html"> <img src="./assets/project.webp" class="d-block w-100" alt="Projects"></a>
+        <a href="./pages/proyectos.html"> <img src="./assets/project.webp" class="d-block w-100" alt="Projects"></a>
         <div class="carousel-caption d-md-block bg-black opacity-75 rounded-pill">
           <h2>Mis Proyectos</h2>
           <p>Últimos Proyectos
@@ -81,7 +81,7 @@
       </div>
 
       <div class="carousel-item">
-        <a href="./pages/contact.html"> <img src="./assets/contact.webp" class="d-block w-100" alt="Contact"></a>
+        <a href="./pages/contacto.html"> <img src="./assets/contact.webp" class="d-block w-100" alt="Contact"></a>
         <div class="carousel-caption d-md-block bg-black opacity-75 rounded-pill">
           <h2>Contactame</h2>
           <p>Espero tu Mensaje
