--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -39,7 +39,7 @@
         <div class="collapse navbar-collapse justify-content-end" id="navbarNavAltMarkup">
           <div class="navbar-nav d-flex justify-content-between w-75">
             <a class="nav-link text-secondary-emphasis header__text" href="../pages/about.html">Acerca De Mi</a>
-            <a class="nav-link text-secondary-emphasis header__text" href="../pages/proyectos.html">Projectos</a>
+            <a class="nav-link text-secondary-emphasis header__text" href="../pages/proyectos.html">Proyectos</a>
             <a class="nav-link text-secondary-emphasis header__text" href="../pages/resumen.html">Resumen</a>
             <a class="nav-link text-secondary-emphasis header__text" href="../pages/contacto.html">Contacto</a>
           </div>
