arregle errores de imagen

--- a/pages/proyectos.html
+++ b/pages/proyectos.html
@@ -48,7 +48,7 @@
     </nav>
   </header>
 
-  <h1 class="title color-white fs-3 text">My projects</h1>
+  <h1 class="title color-white fs-3 text">Mis Proyectos</h1>
   <section class="container-cards px-5 lg d-flex row">
 
     <div class="card text-bg-dark mb-3" style="width: 18rem;">
@@ -97,7 +97,7 @@
             <img src="../assets/claro-pay.webp" class="card-img-top" alt="imagen del sitio">
           </div>
           <div class="flip-card-back">
-            <img src="#" class="card-img-top" alt="imagen del sitio">
+            <img src="../assets/claro-pay.webp" class="card-img-top" alt="imagen del sitio">
           </div>
         </div>
       </div>
