Página terminada, arregle algunos errores, cambie unas imagenes y descripciones

--- a/pages/proyectos.html
+++ b/pages/proyectos.html
@@ -55,17 +55,17 @@
       <div class="flip-card">
         <div class="flip-card-inner">
           <div class="flip-card-front">
-            <img src="../assets/latamex.webp" class="card-img-top image__card" alt="imagen del sitio">
+            <img src="../assets/metamask.jpg" class="card-img-top image__card" alt="imagen del sitio">
           </div>
           <div class="flip-card-back">
-            <img src="../assets/latamex.webp" class="card-img-top image__card" alt="imagen del sitio">
+            <img src="../assets/metamask.jpg" class="card-img-top image__card" alt="imagen del sitio">
           </div>
         </div>
       </div>
       <div class="card-body">
-        <h5 class="card-title">Latamex</h5>
+        <h5 class="card-title">Metamask</h5>
         <p class="card-text">
-          Una Página para comprar y vender criptomonedas.
+          Una Wallet de crypto donde podes hacer transacciones a un valor accesible
         </p>
         <a href="#" target="_blank" class="btn main-button">Visita el sitio</a>
       </div>
@@ -75,16 +75,16 @@
       <div class="flip-card">
         <div class="flip-card-inner">
           <div class="flip-card-front">
-            <img src="../assets/ping.webp" class="card-img-top" alt="imagen del sitio">
+            <img src="../assets/CoinGecko-logo.jpg" class="card-img-top" alt="imagen del sitio">
           </div>
           <div class="flip-card-back">
-            <img src="../assets/ping.webp" class="card-img-top" alt="imagen del sitio">
+            <img src="../assets/CoinGecko-logo.jpg" class="card-img-top" alt="imagen del sitio">
           </div>
         </div>
       </div>
       <div class="card-body">
-        <h5 class="card-title">Ping</h5>
-        <p class="card-text"> Una Wallet al estilo Metamask donde podes tener almacenado tu dinero en crypto como por ejemplo en ETH
+        <h5 class="card-title">Coingecko</h5>
+        <p class="card-text"> Un lugar donde podes checkear el valor de las crypto
         </p>
         <a href="#" target="_blank" class="btn main-button">Visita el sitio</a>
       </div>
