--- a/pages/resumen.html
+++ b/pages/resumen.html
@@ -78,7 +78,7 @@
           </p>
         </article>
         <article class="col-sm-12 col-md-9">
-          <h3 class="subtitle color-white fs-5 text">Trabajos Anteriores</h3>
+          <h3 class="subtitle color-white fs-5 text">Trabajos</h3>
 
           <p class="text color-white">
             Actualmente hago solo trabajos freelance y a pedido de mis amigos que tienen emprendimientos chicos
