arregle textos en la parte de resumen.html y finalice la web/portafolio

--- a/pages/resumen.html
+++ b/pages/resumen.html
@@ -81,7 +81,7 @@
           <h3 class="subtitle color-white fs-5 text">Trabajos</h3>
 
           <p class="text color-white">
-            Actualmente hago solo trabajos freelance y a pedido de mis amigos que tienen emprendimientos chicos
+            Actualmente hago solo trabajos freelance y a pedido, ideal para emprndimientos que recién estan empezando y necesitan una página web
           </p>
           <h4 class="subtitle color-white fs-6 text">Proyectos a Futuro</h4>
           <ul class=" list text color-white">
